--- a/tests/resources/translations/translation_tests/full_tracker_config.json
+++ b/tests/resources/translations/translation_tests/full_tracker_config.json
@@ -465,23 +465,26 @@
             "TWN",
             "USA"
         ],
-        "tags": [
-            "Commentary",
-            "2in1",
-            "Hybrid",
-            "OpenMatte",
-            "2D3D",
-            "WEBRip",
-            "WEBDL",
-            "3D",
-            "4kRemaster",
-            "DualAudio",
-            "EnglishDub",
-            "Personal",
-            "Scene",
-            "DigitalExtras",
-            "Extras"
-        ]
+        "tags": {
+            "type":"string",
+            "tags":[
+                "Commentary",
+                "2in1",
+                "Hybrid",
+                "OpenMatte",
+                "2D3D",
+                "WEBRip",
+                "WEBDL",
+                "3D",
+                "4kRemaster",
+                "DualAudio",
+                "EnglishDub",
+                "Personal",
+                "Scene",
+                "DigitalExtras",
+                "Extras"
+            ]
+        }
     },
     "Default": {
         "format": "json"
