--- a/CHANGELOG
+++ b/CHANGELOG
@@ -23,6 +23,7 @@
     Bug Fixes
         * Issue#41: Incorrect channel count detected
         * Issue#42: Support for Dual Audio Detection
+        * Issue#82: Thumbnail for BHD screenshots
 
 <br>
 
