--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,18 @@
+## **3.0.5**
+    New Features
+        * Support for DVD and HD-DVD PTP uploads
+        * Support for custom upload tags from argument
+        * Skipping upload of banned groups
+
+    Bug Fixes
+        * Issue#80: DDH releases are not identified and is marked as no group
+        * Issue#84: Multi tag added to release with unknown audio
+        * Issue#86: Application crash if srrdb api call fails
+        * Issue#87: reuploading ptpimg and imgbox screens when uploading to gpw
+        * Issue#90: Certain remuxes identified as full discs
+
+<br>
+
 ## **3.0.4**
     New Trackers (Only for Upload Assistant)
         * PassThePopcorn
