normalizing torrent and screenshot names

--- a/tests/resources/translations/translation_tests/2/tracker_settings.json
+++ b/tests/resources/translations/translation_tests/2/tracker_settings.json
@@ -1,6 +1,6 @@
 {
     "name": "The.Title.0000.Source.Audio.Codec.Video.Codec-GGBot",
-    "file": "/temp_upload/some_ramdom_hash/GG-BOT-The.Title.0000.Source.Audio.Codec.Video.Codec-GGBot.torrent",
+    "file": "/temp_upload/some_ramdom_hash/GG-BOT-thetitle0000sourceaudiocodecvideocodec_ggbot.torrent",
     "mediainfo": "media_info_file.txt",
     "cat": "7",
     "source": "4",
