--- a/tests/resources/translations/translation_tests/3/tracker_settings.json
+++ b/tests/resources/translations/translation_tests/3/tracker_settings.json
@@ -1,6 +1,6 @@
 {
     "name": "The.Title",
-    "file": "/temp_upload/some_ramdom_hash/GG-BOT-The.Title.torrent",
+    "file": "/temp_upload/some_ramdom_hash/GG-BOT-thetitle.torrent",
     "mediainfo": "",
     "cat": "7",
     "source": "3",
