--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,17 @@
+## **3.0.6**
+    New Trackers
+        * TheDarkCommunity
+    
+    New Features
+        * Support for Anamorphic videos and screenshots in display resolution
+    
+    Bug Fixes
+        * Fixed an issue where release groups was not identified for AV1 releases
+        * Issue#67: Torf fails due to invalid characters in torrent title
+        * Issue#92: Reuploader has issues with folders starting with [ ]
+
+<br>
+ 
 ## **3.0.5**
     New Features
         * Support for DVD and HD-DVD PTP uploads
